@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gtkwindows.c,v 1.31 2008/06/10 21:00:49 Superfly_Jon Exp $
+ * $Id: gtkwindows.c,v 1.32 2008/07/23 09:36:17 c_anthon Exp $
  */
 
 #include "config.h"
@@ -165,10 +165,11 @@ extern GtkWidget *GTKCreateDialog(const char *szTitle, const dialogtype dt,
 		parent = GTKGetCurrentParent();
 	if (!GTK_IS_WINDOW(parent))
 		parent = gtk_widget_get_toplevel(parent);
-	if (GTK_IS_WINDOW(parent))
-		gtk_window_present(GTK_WINDOW(parent));
 	if (parent && !GTK_WIDGET_REALIZED(parent))
+		/* if parent isn't realized we should not present it.*/
 		parent = NULL;
+	if (parent && GTK_IS_WINDOW(parent))
+		gtk_window_present(GTK_WINDOW(parent));
 	if (parent != NULL)
 		gtk_window_set_transient_for(GTK_WINDOW(pwDialog), GTK_WINDOW(parent));
         if (flags & DIALOG_FLAG_MODAL && !( flags & DIALOG_FLAG_NOTIDY))
